--- a/sisa-project-main/.gitignore
+++ b/sisa-project-main/.gitignore
@@ -1,17 +1,31 @@
+# Environment variables
 .env
-frontend/.env
-backend/.env
+.env.local
+.env.development
+.env.test
+.env.production
+frontend/.env*
+backend/.env*
 
-package-lock.json
-backend/package-lock.json 
-frontend/package-lock.json
-
-
+# Dependencies
 node_modules
-backend/node_modules
+*/node_modules
 frontend/node_modules
+backend/node_modules
 
-backend/cert/cert.pem
-backend/cert/key.pem
+# Package locks
+package-lock.json
+*/package-lock.json
+frontend/package-lock.json
+backend/package-lock.json
 
+# Certificates
+backend/cert/*
+*.pem
+
+# Database
 init.sql
+
+# OS files
+.DS_Store
+*.log
